# lpc-engine

./: LICENSE  README.md  pyproject.toml  run.py  simulation.py
lpc/: config.py  decision.py  entity.py  memory.py  metrics.py  population.py  scenarios.py  traits.py  world.py
presets/: presets.py  visualization.py
